--- a/templates/home.html
+++ b/templates/home.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Laire</title>
-  </head>
-  <body>
-Laire
-  </body>
+<link href='https://fonts.googleapis.com/css?family=Josefin Sans' rel='stylesheet'>
+    <head>
+        <meta charset="utf-8">
+        <title>Laire</title>
+        <style>
+        body{
+        	background-color: #373744;
+        	font-family: 'Josefin Sans';font-size: 18px;
+        }
+        </style>
+
+    </head>
+    <body>
+        <img src="laireLogo.png" alt="logo" width="130px" >
+    </body>
 </html>
