--- a/templates/home.html
+++ b/templates/home.html
@@ -13,6 +13,6 @@
 
     </head>
     <body>
-        <img src="laireLogo.png" alt="logo" width="130px" >
+        <img src="url_for('static', filename='images/logo.png')" alt="logo" width="130px" >
     </body>
 </html>
