--- a/templates/home.html
+++ b/templates/home.html
@@ -157,7 +157,7 @@
 
 
   <!-- OUR TOOLS -->
-  <div class="container blue-grey" style="padding:128px 16px;" id="tools">
+  <center><div class="container blue-grey" style="padding:128px 16px;" id="tools">
     <h3 class="center">OUR TOOLS</h3>
     <p class="center large">How we help the community</p>
     <div class="row-padding center" style="margin-top:64px">
@@ -175,10 +175,10 @@
 
     </div>
   </div>
-
+</center>
   <!-- OUR TEAM -->
   <div class="container blue-gray" style="padding:128px 16px" id="team">
-    <h3 class="center">THE TEAM</h3>
+    <center><h3 class="center">THE TEAM</h3></center>
     <div class="row-padding " style="margin-top:64px">
       <div class="col l4 m6 margin-bottom">
         <div class="card">
