--- a/templates/home.html
+++ b/templates/home.html
@@ -189,8 +189,8 @@
             <p class="opacity">Tuff Guy</p>
             <p>Pranav Addepalli is a tuff guy</p>
             <center>
-              <a href="mailto:pranav@laire.org"> <i class="fa fa-envelope zoom" style="padding-left:40px; padding-right:40px; padding-bottom:20px"></i></a>
-              <a href="https://www.linkedin.com/in/pranavaddepalli/"> <i class="fa fa-linkedin hover-opacity zoom" style="padding-left:40px; padding-right:40px; padding-bottom:20px"></i></a>
+              <a href="mailto:pranav@laire.org"> <i class="fa fa-envelope zoom" style="padding-left:20px; padding-right:20px; padding-bottom:20px"></i></a>
+              <a href="https://www.linkedin.com/in/pranavaddepalli/"> <i class="fa fa-linkedin hover-opacity zoom" style="padding-left:20px; padding-right:20px; padding-bottom:20px"></i></a>
 
             </center>
           </div>
@@ -204,8 +204,8 @@
             <p class="opacity">Lead Backend Developer</p>
             <p>Haneef Khan is a cool guy</p>
             <center>
-              <a href="mailto:haneef@laire.org"> <i class="fa fa-envelope zoom" style="padding-left:40px; padding-right:40px; padding-bottom:20px"></i></a>
-              <a href="https://www.linkedin.com/in/haneef-khan-778676139/"> <i class="fa fa-linkedin hover-opacity zoom" style="padding-left:40px; padding-right:40px; padding-bottom:20px"></i></a>
+              <a href="mailto:haneef@laire.org"> <i class="fa fa-envelope zoom" style="padding-left:20px; padding-right:20px; padding-bottom:10px"></i></a>
+              <a href="https://www.linkedin.com/in/haneef-khan-778676139/"> <i class="fa fa-linkedin hover-opacity zoom" style="padding-left:20px; padding-right:20px; padding-bottom:20px"></i></a>
             </center>
           </div>
         </div>
@@ -216,10 +216,10 @@
           <div class="container">
             <h3>Sid Rapolu</h3>
             <p class="opacity">Lead UX Developer</p>
-            <p>Sid Rapolu is a guy</p>
+            <p>Sid Rapolu develops the frontend to create a user-friendly interface. This allows the user experience to be the best it can be.</p>
             <center>
-              <a href="mailto:sid@laire.org"> <i class="fa fa-envelope zoom" style="padding-left:40px; padding-right:40px; padding-bottom:20px"></i></a>
-              <a href="https://www.linkedin.com/in/sid-r-2a00a1137/"> <i class="fa fa-linkedin hover-opacity zoom" style="padding-left:40px; padding-right:40px; padding-bottom:20px"></i></a>
+              <a href="mailto:sid@laire.org"> <i class="fa fa-envelope zoom" style="padding-left:20px; padding-right:20px; padding-bottom:10px"></i></a>
+              <a href="https://www.linkedin.com/in/sid-r-2a00a1137/"> <i class="fa fa-linkedin hover-opacity zoom" style="padding-left:20px; padding-right:20px; padding-bottom:10px"></i></a>
 
             </center>
           </div>
