--- a/templates/home.html
+++ b/templates/home.html
@@ -212,7 +212,7 @@
       </div>
       <div class="col l4 m6 margin-bottom">
         <div class="card">
-          <img src="/w3images/team3.jpg" alt="Sid" style="width:100%">
+          <img src="../static/images/sidPic.jpg" alt="Sid" style="width:100%">
           <div class="container">
             <h3>Sid Rapolu</h3>
             <p class="opacity">Lead UX Developer</p>
