--- a/templates/home.html
+++ b/templates/home.html
@@ -212,10 +212,10 @@
       </div>
       <div class="col l4 m6 margin-bottom">
         <div class="card">
-          <img src="../static/images/sidPic.jpg" alt="Sid" style="width:100%">
+          <img src="../static/images/sidPic.jpg" alt="Sid" style="width:60%">
           <div class="container">
             <h3>Sid Rapolu</h3>
-            <p class="opacity">Lead UX Developer</p>
+            <p class="opacity" style="padding-bottom: 10px;">Lead UX Developer</p>
             <p>Sid Rapolu develops the frontend to create a user-friendly interface. This allows the user experience to be the best it can be.</p>
             <center>
               <a href="mailto:sid@laire.org"> <i class="fa fa-envelope zoom" style="padding-left:20px; padding-right:20px; padding-bottom:10px"></i></a>
