--- a/templates/home.html
+++ b/templates/home.html
@@ -77,7 +77,7 @@
   }
 
   #tools {
-    background-color: #565863;
+    background-color: black;
   }
 </style>
 
@@ -212,7 +212,7 @@
       </div>
       <div class="col l4 m6 margin-bottom">
         <div class="card">
-          <img src="../static/images/sidPic.jpg" alt="Sid" style="width:60%">
+          <img src="../static/images/sidPic.jpg" alt="Sid" width="100px"style="width:100%">
           <div class="container">
             <h3>Sid Rapolu</h3>
             <p class="opacity" style="padding-bottom: 10px;">Lead UX Developer</p>
