--- a/templates/home.html
+++ b/templates/home.html
@@ -182,7 +182,7 @@
     <div class="row-padding " style="margin-top:64px">
       <div class="col l4 m6 margin-bottom">
         <div class="card">
-          <img src="/w3imagesteam1.jpg" alt="Pranav" style="width:100%">
+          <img src="../static/images/pranavPic.jpg" alt="Pranav" width="70px"style="width:100%">
           <div class="container">
             <h3>Pranav Addepalli</h3>
             <p class="opacity">Tuff Guy</p>
@@ -196,7 +196,7 @@
       </div>
       <div class="col l4 m6 margin-bottom">
         <div class="card">
-          <img src="/w3images/team1.jpg" alt="Haneef" style="width:100%">
+          <img src="../static/images/haneefPic.jpg" alt="Haneef" width="70px"style="width:100%">
           <div class="container">
             <h3>Haneef Khan</h3>
             <p class="opacity">Lead Backend Developer</p>
@@ -209,7 +209,7 @@
       </div>
       <div class="col l4 m6 margin-bottom">
         <div class="card">
-          <img src="../static/images/sidPic.jpg" alt="Sid" width="500px"style="width:100%">
+          <img src="../static/images/sidPic.jpg" alt="Sid" width="70px"style="width:100%">
           <div class="container">
             <h3>Sid Rapolu</h3>
             <p class="opacity" style="padding-bottom: 20px;">Lead UX Developer</p>
