--- a/templates/home.html
+++ b/templates/home.html
@@ -182,10 +182,10 @@
     <div class="row-padding " style="margin-top:64px">
       <div class="col l4 m6 margin-bottom">
         <div class="card">
-          <img src="../static/images/pranavPic.jpg" alt="Pranav" width="70px"style="width:100%">
+          <img src="../static/images/pranavPic.JPEG" alt="Pranav" width="70px"style="width:100%">
           <div class="container">
             <h3>Pranav Addepalli</h3>
-            <p class="opacity">Tuff Guy</p>
+            <p class="opacity" style="padding-bottom: 20px;">Full Stack Developer</p>
             <center>
               <a href="mailto:pranav@laire.org"> <i class="fa fa-envelope zoom" style="padding-left:20px; padding-right:20px; padding-bottom:20px"></i></a>
               <a href="https://www.linkedin.com/in/pranavaddepalli/"> <i class="fa fa-linkedin hover-opacity zoom" style="padding-left:20px; padding-right:20px; padding-bottom:20px"></i></a>
@@ -196,10 +196,10 @@
       </div>
       <div class="col l4 m6 margin-bottom">
         <div class="card">
-          <img src="../static/images/haneefPic.jpg" alt="Haneef" width="70px"style="width:100%">
+          <img src="../static/images/haneefPic.JPEG" alt="Haneef" width="70px"style="width:100%">
           <div class="container">
             <h3>Haneef Khan</h3>
-            <p class="opacity">Lead Backend Developer</p>
+            <p class="opacity" style="padding-bottom: 20px;">Lead Backend Developer</p>
             <center>
               <a href="mailto:haneef@laire.org"> <i class="fa fa-envelope zoom" style="padding-left:20px; padding-right:20px; padding-bottom:10px"></i></a>
               <a href="https://www.linkedin.com/in/haneef-khan-778676139/"> <i class="fa fa-linkedin hover-opacity zoom" style="padding-left:20px; padding-right:20px; padding-bottom:20px"></i></a>
