--- a/templates/home.html
+++ b/templates/home.html
@@ -87,8 +87,8 @@
 
   <!-- Navbar (sit on top) -->
   <div class="top">
-    <div class="bar white card" id="myNavbar">
-      <a href="#home" class="bar-item button wide"><img src="static/images/logo.png" style="width: auto; height:250px;border:0;"></a>
+    <div class="bar white card" id="myNavbar" height="30px">
+      <a href="#home" class="bar-item button wide"><img src="static/images/logo.png" style="width: auto; height:30px;border:0;"></a>
       <!-- Right-sided navbar links -->
       <div class="right hide-small">
         <a href="#home" class="bar-item button">HOME</a>
