--- a/templates/home.html
+++ b/templates/home.html
@@ -46,7 +46,7 @@
   .bgimg-1 {
     background-position: center;
     background-size: cover;
-    background-image: url("static/images/neuralnetwork.jpg");
+    background-color: #43454f;
     min-height: 100%;
   }
 
