--- a/templates/home.html
+++ b/templates/home.html
@@ -46,7 +46,7 @@
   .bgimg-1 {
     background-position: center;
     background-size: cover;
-    background-color: #43454f;
+    background-image: url("https://imgnooz.com/sites/default/files/wallpaper/abstract/55590/pink-blue-gradient-wallpapers-55590-9972982.png");
     min-height: 100%;
   }
 
@@ -113,9 +113,9 @@
   </nav>
 
   <!-- Header with full-height image -->
-  <header class="bgimg-1 display-container grayscale-min" id="home">
+  <header class="bgimg-1 display-container grayscale-min" id="home" height="600px">
     <div class="display-left text-white" style="padding:48px">
-      <span class="jumbo hide-small"><img src="static/images/logo.png" style="width: auto; height: 300px; position: relative; top:150px; left:50px;" </span> <br>
+      <span class="jumbo hide-small"><img src="static/images/logo.png" style="width: auto; height: 200px; position: relative; top:150px; left:50px;" </span> <br>
         <span class="xxlarge hide-large hide-medium">Laire</span><br>
         <span class="large" style="position: relative; left: 50px;">Know your heart.</span>
         <p><a href="#about" class="button white padding-large large margin-top opacity hover-opacity-off" style="position:relative;left:50px;">Learn more</a></p>
