--- a/templates/home.html
+++ b/templates/home.html
@@ -76,7 +76,7 @@
   }
 
   #tools {
-    background-color: black;
+    background-image: url("https://imgnooz.com/sites/default/files/wallpaper/abstract/55590/pink-blue-gradient-wallpapers-55590-3961722.jpg");
   }
 </style>
 
