--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1391,7 +1391,7 @@ a {
 
 .blue-grey, .hover-blue-grey:hover, .blue-gray, .hover-blue-gray:hover {
   color: #fff !important;
-  background-color: #607d8b !important
+  background-color: #ffffff !important
 
 }
 
