--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1639,7 +1639,7 @@ a {
 }
 
 .border-blue-grey, .hover-border-blue-grey:hover, .border-blue-gray, .hover-border-blue-gray:hover {
-  border-color: #607d8b !important
+  border-color: #ffffff !important
 }
 
 .border-green, .hover-border-green:hover {
