--- a/templates/home.html
+++ b/templates/home.html
@@ -24,7 +24,7 @@
     line-height: 1.8;
     opacity: 1;
     transition: 2s opacity;
-    background-color: black;
+    background-color: white;
   }
 
   body.fade-out {
