--- a/templates/home.html
+++ b/templates/home.html
@@ -228,9 +228,11 @@
 
   <!-- Footer -->
   <footer class="center black padding-64">
+      <center>
     <a href="#home" class="button light-grey"><i class="fa fa-arrow-up margin-right"></i>Top</a>
     <div class="xlarge section">
     </div>
+</center>
   </footer>
 
 
