--- a/templates/home.html
+++ b/templates/home.html
@@ -73,7 +73,7 @@
   }
 
   .zoom:hover {
-    transform: scale(1.5);
+    transform: scale(1.2);
   }
 
   #tools {
@@ -162,7 +162,7 @@
     <h3 class="center">OUR TOOLS</h3>
     <p class="center large">How we help the community</p>
     <div class="row-padding center" style="margin-top:64px">
-      <div class="quarter zoom" onclick="location.href='{{ url_for('hbclassification') }}';" style="margin-left:10%">
+      <div width="400px"class="quarter zoom" onclick="location.href='{{ url_for('hbclassification') }}';" style="margin-left:10%">
         <i class="fa fa-heart margin-bottom jumbo center"></i>
         <p class="large">Heartbeat Classification</p>
         <p>Based on just a 9 second .wav file, Laire can classify heartbeats into 4 distinct categories:
