--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1535,7 +1535,7 @@ a {
 }
 
 .text-blue-grey, .hover-text-blue-grey:hover, .text-blue-gray, .hover-text-blue-gray:hover {
-  color: #607d8b !important
+  color: #ffffff !important
 }
 
 .text-green, .hover-text-green:hover {
