--- a/templates/home.html
+++ b/templates/home.html
@@ -161,7 +161,7 @@
   <center><div class="container blue-grey" style="padding:10px 10px;" id="tools">
     <h3 class="center">OUR TOOLS</h3>
     <p class="center large">How we help the community</p>
-    <div class="row-padding center" style="margin-top:64px">
+    <div class="row-padding center" style="width: 100%; margin-top:64px">
       <div class="quarter zoom" onclick="location.href='{{ url_for('hbclassification') }}';" style="margin-left:10%">
         <i class="fa fa-heart margin-bottom jumbo center"></i>
         <p class="large">Heartbeat Classification</p>
