--- a/templates/home.html
+++ b/templates/home.html
@@ -178,15 +178,15 @@
   </div>
 </center>
   <!-- OUR TEAM -->
-  <div class="container blue-gray" style="padding:128px 16px" id="team">
+  <div class="container" style=" background-color: black; padding:128px 16px" id="team">
     <center><h3 class="center">THE TEAM</h3></center>
     <div class="row-padding " style="margin-top:64px">
       <div class="col l4 m6 margin-bottom">
         <div class="card">
           <img src="../static/images/pranavPic.JPEG" alt="Pranav" width="70px"style="width:100%">
           <div class="container">
-            <h3 style="color: black;">Pranav Addepalli</h3>
-            <p class="opacity" style="padding-bottom: 20px; color: black;">Full Stack Developer</p>
+            <h3>Pranav Addepalli</h3>
+            <p class="opacity" style="padding-bottom: 20px;">Full Stack Developer</p>
             <center>
               <a href="mailto:pranav@laire.org"> <i class="fa fa-envelope zoom" style="padding-left:20px; padding-right:20px; padding-bottom:20px"></i></a>
               <a href="https://www.linkedin.com/in/pranavaddepalli/"> <i class="fa fa-linkedin hover-opacity zoom" style="padding-left:20px; padding-right:20px; padding-bottom:30px"></i></a>
@@ -199,8 +199,8 @@
         <div class="card">
           <img src="../static/images/haneefPic.JPEG" alt="Haneef" width="70px"style="width:100%">
           <div class="container">
-            <h3 style="color: black;">Haneef Khan</h3>
-            <p class="opacity" style="padding-bottom: 20px; color: black;">Lead Backend Developer</p>
+            <h3>Haneef Khan</h3>
+            <p class="opacity" style="padding-bottom: 20px;">Lead Backend Developer</p>
             <center>
               <a href="mailto:haneef@laire.org"> <i class="fa fa-envelope zoom" style="padding-left:20px; padding-right:20px; padding-bottom:10px"></i></a>
               <a href="https://www.linkedin.com/in/haneef-khan-778676139/"> <i class="fa fa-linkedin hover-opacity zoom" style="padding-left:20px; padding-right:20px; padding-bottom:30px"></i></a>
@@ -212,8 +212,8 @@
         <div class="card">
           <img src="../static/images/sidPic.jpg" alt="Sid" width="70px"style="width:100%">
           <div class="container">
-            <h3 style="color: black;">Sid Rapolu</h3>
-            <p class="opacity" style="padding-bottom: 20px; color: black;">Lead UX Developer</p>
+            <h3>Sid Rapolu</h3>
+            <p class="opacity" style="padding-bottom: 20px;">Lead UX Developer</p>
             <center>
               <a href="mailto:sid@laire.org"> <i class="fa fa-envelope zoom" style="padding-left:20px; padding-right:20px; padding-bottom:30px"></i></a>
               <a href="https://www.linkedin.com/in/sid-r-2a00a1137/"> <i class="fa fa-linkedin hover-opacity zoom" style="padding-left:20px; padding-right:20px; padding-bottom:30px"></i></a>
