--- a/templates/home.html
+++ b/templates/home.html
@@ -178,11 +178,11 @@
   </div>
 </center>
   <!-- OUR TEAM -->
-  <div class="container" style=" background-color: black; padding:128px 16px" id="team">
-    <center><h3 class="center">THE TEAM</h3></center>
+  <div class="container" style="padding:128px 16px" id="team">
+    <center><h3 class="center" style="color: black;">THE TEAM</h3></center>
     <div class="row-padding " style="margin-top:64px">
       <div class="col l4 m6 margin-bottom">
-        <div class="card">
+        <div class="card" style="background-color: black;">
           <img src="../static/images/pranavPic.JPEG" alt="Pranav" width="70px"style="width:100%">
           <div class="container">
             <h3>Pranav Addepalli</h3>
