--- a/templates/home.html
+++ b/templates/home.html
@@ -125,7 +125,7 @@
   </header>
 
   <!-- ABOUT COMPANY -->
-  <div class="container light-grey" style="padding:128px 16px" id="about">
+  <div class="container light-grey" style="padding-top: 20px; padding:128px 16px" id="about">
     <div class="row-padding">
       <div class="col m6">
         <h3>Medical insights powered by machine learning.</h3>
@@ -182,7 +182,7 @@
     <center><h3 class="center" style="color: black;">THE TEAM</h3></center>
     <div class="row-padding " style="margin-top:64px">
       <div class="col l4 m6 margin-bottom">
-        <div class="card" style="background-color: black;">
+        <div class="card" style="background-color: #ff9393;">
           <img src="../static/images/pranavPic.JPEG" alt="Pranav" width="70px"style="width:100%">
           <div class="container">
             <h3>Pranav Addepalli</h3>
@@ -196,7 +196,7 @@
         </div>
       </div>
       <div class="col l4 m6 margin-bottom">
-        <div class="card">
+        <div class="card" style="background-color: #ff9393;">
           <img src="../static/images/haneefPic.JPEG" alt="Haneef" width="70px"style="width:100%">
           <div class="container">
             <h3>Haneef Khan</h3>
@@ -209,7 +209,7 @@
         </div>
       </div>
       <div class="col l4 m6 margin-bottom">
-        <div class="card">
+        <div class="card" style="background-color: #ff9393;">
           <img src="../static/images/sidPic.jpg" alt="Sid" width="70px"style="width:100%">
           <div class="container">
             <h3>Sid Rapolu</h3>
