--- a/templates/home.html
+++ b/templates/home.html
@@ -182,11 +182,11 @@
     <center><h3 class="center" style="color: black;">THE TEAM</h3></center>
     <div class="row-padding " style="margin-top:64px">
       <div class="col l4 m6 margin-bottom">
-        <div class="card" style="background-color: #ff9393;">
+        <div class="card" style="background-color: #ff9393; width: 70px;">
           <img src="../static/images/pranavPic.JPEG" alt="Pranav" width="70px"style="width:100%">
           <div class="container">
-            <h3>Pranav Addepalli</h3>
-            <p class="opacity" style="padding-bottom: 20px;">Full Stack Developer</p>
+            <h3 style="color: #d8d8d8;">Pranav Addepalli</h3>
+            <p class="opacity" style="padding-bottom: 20px; color: #d8d8d8;">Full Stack Developer</p>
             <center>
               <a href="mailto:pranav@laire.org"> <i class="fa fa-envelope zoom" style="padding-left:20px; padding-right:20px; padding-bottom:20px"></i></a>
               <a href="https://www.linkedin.com/in/pranavaddepalli/"> <i class="fa fa-linkedin hover-opacity zoom" style="padding-left:20px; padding-right:20px; padding-bottom:30px"></i></a>
@@ -196,11 +196,11 @@
         </div>
       </div>
       <div class="col l4 m6 margin-bottom">
-        <div class="card" style="background-color: #ff9393;">
+        <div class="card" style="background-color: #ff9393; width: 70px;">
           <img src="../static/images/haneefPic.JPEG" alt="Haneef" width="70px"style="width:100%">
           <div class="container">
-            <h3>Haneef Khan</h3>
-            <p class="opacity" style="padding-bottom: 20px;">Lead Backend Developer</p>
+            <h3 style="color: #d8d8d8;">Haneef Khan</h3>
+            <p class="opacity" style="padding-bottom: 20px; color: #d8d8d8;">Lead Backend Developer</p>
             <center>
               <a href="mailto:haneef@laire.org"> <i class="fa fa-envelope zoom" style="padding-left:20px; padding-right:20px; padding-bottom:10px"></i></a>
               <a href="https://www.linkedin.com/in/haneef-khan-778676139/"> <i class="fa fa-linkedin hover-opacity zoom" style="padding-left:20px; padding-right:20px; padding-bottom:30px"></i></a>
@@ -209,11 +209,11 @@
         </div>
       </div>
       <div class="col l4 m6 margin-bottom">
-        <div class="card" style="background-color: #ff9393;">
+        <div class="card" style="background-color: #ff9393; width: 70px;">
           <img src="../static/images/sidPic.jpg" alt="Sid" width="70px"style="width:100%">
           <div class="container">
-            <h3>Sid Rapolu</h3>
-            <p class="opacity" style="padding-bottom: 20px;">Lead UX Developer</p>
+            <h3 style="color: #d8d8d8;">Sid Rapolu</h3>
+            <p class="opacity" style="padding-bottom: 20px; color: #d8d8d8;">Lead UX Developer</p>
             <center>
               <a href="mailto:sid@laire.org"> <i class="fa fa-envelope zoom" style="padding-left:20px; padding-right:20px; padding-bottom:30px"></i></a>
               <a href="https://www.linkedin.com/in/sid-r-2a00a1137/"> <i class="fa fa-linkedin hover-opacity zoom" style="padding-left:20px; padding-right:20px; padding-bottom:30px"></i></a>
