--- a/templates/home.html
+++ b/templates/home.html
@@ -182,8 +182,8 @@
     <center><h3 class="center" style="color: black;">THE TEAM</h3></center>
     <div class="row-padding " style="margin-top:64px">
       <div class="col l4 m6 margin-bottom">
-        <div class="card" style="background-color: #ff9393; width: 70px;">
-          <img src="../static/images/pranavPic.JPEG" alt="Pranav" width="70px"style="width:100%">
+        <div class="card" style="background-color: #ff9393; width: 300px; height: 400px;">
+          <img src="../static/images/pranavPic.JPEG" alt="Pranav" style="width:100%">
           <div class="container">
             <h3 style="color: #d8d8d8;">Pranav Addepalli</h3>
             <p class="opacity" style="padding-bottom: 20px; color: #d8d8d8;">Full Stack Developer</p>
@@ -196,8 +196,8 @@
         </div>
       </div>
       <div class="col l4 m6 margin-bottom">
-        <div class="card" style="background-color: #ff9393; width: 70px;">
-          <img src="../static/images/haneefPic.JPEG" alt="Haneef" width="70px"style="width:100%">
+        <div class="card" style="background-color: #ff9393; width: 300px; height: 400px;">
+          <img src="../static/images/haneefPic.JPEG" alt="Haneef" style="width:100%">
           <div class="container">
             <h3 style="color: #d8d8d8;">Haneef Khan</h3>
             <p class="opacity" style="padding-bottom: 20px; color: #d8d8d8;">Lead Backend Developer</p>
@@ -209,8 +209,8 @@
         </div>
       </div>
       <div class="col l4 m6 margin-bottom">
-        <div class="card" style="background-color: #ff9393; width: 70px;">
-          <img src="../static/images/sidPic.jpg" alt="Sid" width="70px"style="width:100%">
+        <div class="card" style="background-color: #ff9393; width: 300px; height: 400px;">
+          <img src="../static/images/sidPic.jpg" alt="Sid" style="width:100%">
           <div class="container">
             <h3 style="color: #d8d8d8;">Sid Rapolu</h3>
             <p class="opacity" style="padding-bottom: 20px; color: #d8d8d8;">Lead UX Developer</p>
