--- a/templates/home.html
+++ b/templates/home.html
@@ -114,7 +114,7 @@
   </nav>
 
   <!-- Header with full-height image -->
-  <header class="bgimg-1 display-container grayscale-min" id="home" height="600px">
+  <header class="bgimg-1 display-container grayscale-min" id="home" height="500px">
     <div class="display-left text-white" style="padding:48px">
       <span class="jumbo hide-small"><img src="static/images/logo.png" style="width: auto; height: 200px; position: relative; top:150px; left:50px;" </span> <br>
         <span class="xxlarge hide-large hide-medium">Laire</span><br>
@@ -125,7 +125,7 @@
   </header>
 
   <!-- ABOUT COMPANY -->
-  <div class="container light-grey" style="padding-top: 100px; padding:128px 16px" id="about">
+  <div class="container light-grey" style="padding:128px 16px" id="about">
     <div class="row-padding">
       <div class="col m6">
         <h3>Medical insights powered by machine learning.</h3>
@@ -182,11 +182,11 @@
     <center><h3 class="center" style="color: black;">THE TEAM</h3></center>
     <div class="row-padding " style="margin-top:64px">
       <div class="col l4 m6 margin-bottom">
-        <div class="card" style="background-color: #ff9393; width: 500px;">
+        <div class="card" style="background-color: #a0ffc0; width: 300px;">
           <img src="../static/images/pranavPic.JPEG" alt="Pranav" style="width:100%">
           <div class="container">
-            <h3 style="color: #d8d8d8;">Pranav Addepalli</h3>
-            <p class="opacity" style="padding-bottom: 20px; color: #d8d8d8;">Full Stack Developer</p>
+            <h3 style="color: black;">Pranav Addepalli</h3>
+            <p class="opacity" style="padding-bottom: 20px; color: black;">Full Stack Developer</p>
             <center>
               <a href="mailto:pranav@laire.org"> <i class="fa fa-envelope zoom" style="padding-left:20px; padding-right:20px; padding-bottom:20px"></i></a>
               <a href="https://www.linkedin.com/in/pranavaddepalli/"> <i class="fa fa-linkedin hover-opacity zoom" style="padding-left:20px; padding-right:20px; padding-bottom:30px"></i></a>
@@ -196,10 +196,10 @@
         </div>
       </div>
       <div class="col l4 m6 margin-bottom">
-        <div class="card" style="background-color: #ff9393; width: 500px;">
+        <div class="card" style="background-color: #a0ffc0; width: 300px;">
           <img src="../static/images/haneefPic.JPEG" alt="Haneef" style="width:100%">
           <div class="container">
-            <h3 style="color: #d8d8d8;">Haneef Khan</h3>
+            <h3 style="color: black;">Haneef Khan</h3>
             <p class="opacity" style="padding-bottom: 20px; color: #d8d8d8;">Lead Backend Developer</p>
             <center>
               <a href="mailto:haneef@laire.org"> <i class="fa fa-envelope zoom" style="padding-left:20px; padding-right:20px; padding-bottom:10px"></i></a>
@@ -209,11 +209,11 @@
         </div>
       </div>
       <div class="col l4 m6 margin-bottom">
-        <div class="card" style="background-color: #ff9393; width: 500px;">
+        <div class="card" style="background-color: #a0ffc0; width: 300px;">
           <img src="../static/images/sidPic.jpg" alt="Sid" style="width:100%">
           <div class="container">
-            <h3 style="color: #d8d8d8;">Sid Rapolu</h3>
-            <p class="opacity" style="padding-bottom: 20px; color: #d8d8d8;">Lead UX Developer</p>
+            <h3 style="color: black;">Sid Rapolu</h3>
+            <p class="opacity" style="padding-bottom: 20px; color: black;">Lead UX Developer</p>
             <center>
               <a href="mailto:sid@laire.org"> <i class="fa fa-envelope zoom" style="padding-left:20px; padding-right:20px; padding-bottom:30px"></i></a>
               <a href="https://www.linkedin.com/in/sid-r-2a00a1137/"> <i class="fa fa-linkedin hover-opacity zoom" style="padding-left:20px; padding-right:20px; padding-bottom:30px"></i></a>
