--- a/templates/home.html
+++ b/templates/home.html
@@ -178,11 +178,11 @@
   </div>
 </center>
   <!-- OUR TEAM -->
-  <div class="container" style="padding:128px 16px" id="team">
+  <div class="container" style=" padding-left: 100px;padding:128px 16px" id="team">
     <center><h3 class="center" style="color: black;">THE TEAM</h3></center>
     <div class="row-padding " style="margin-top:64px">
       <div class="col l4 m6 margin-bottom">
-        <div class="card" style="background-color: #a0ffc0; width: 300px;">
+        <div class="card" style="background-color: #a0ffc0; width: 320px;">
           <img src="../static/images/pranavPic.JPEG" alt="Pranav" style="width:100%">
           <div class="container">
             <h3 style="color: black;">Pranav Addepalli</h3>
@@ -196,11 +196,11 @@
         </div>
       </div>
       <div class="col l4 m6 margin-bottom">
-        <div class="card" style="background-color: #a0ffc0; width: 300px;">
+        <div class="card" style="background-color: #a0ffc0; width: 320px;">
           <img src="../static/images/haneefPic.JPEG" alt="Haneef" style="width:100%">
           <div class="container">
             <h3 style="color: black;">Haneef Khan</h3>
-            <p class="opacity" style="padding-bottom: 20px; color: #d8d8d8;">Lead Backend Developer</p>
+            <p class="opacity" style="padding-bottom: 20px; color: black;">Lead Backend Developer</p>
             <center>
               <a href="mailto:haneef@laire.org"> <i class="fa fa-envelope zoom" style="padding-left:20px; padding-right:20px; padding-bottom:10px"></i></a>
               <a href="https://www.linkedin.com/in/haneef-khan-778676139/"> <i class="fa fa-linkedin hover-opacity zoom" style="padding-left:20px; padding-right:20px; padding-bottom:30px"></i></a>
@@ -209,7 +209,7 @@
         </div>
       </div>
       <div class="col l4 m6 margin-bottom">
-        <div class="card" style="background-color: #a0ffc0; width: 300px;">
+        <div class="card" style="background-color: #a0ffc0; width: 320px;">
           <img src="../static/images/sidPic.jpg" alt="Sid" style="width:100%">
           <div class="container">
             <h3 style="color: black;">Sid Rapolu</h3>
