--- a/templates/home.html
+++ b/templates/home.html
@@ -178,9 +178,9 @@
   </div>
 </center>
   <!-- OUR TEAM -->
-  <div class="container" style=" padding-left: 100px;padding:128px 16px" id="team">
+  <div class="container" style="padding:128px 16px" id="team">
     <center><h3 class="center" style="color: black;">THE TEAM</h3></center>
-    <div class="row-padding " style="margin-top:64px">
+    <div class="row-padding " style="margin-top:64px; margin-left: 30px;">
       <div class="col l4 m6 margin-bottom">
         <div class="card" style="background-color: #a0ffc0; width: 320px;">
           <img src="../static/images/pranavPic.JPEG" alt="Pranav" style="width:100%">
