removed tools and medical data thing

--- a/templates/home.html
+++ b/templates/home.html
@@ -164,13 +164,13 @@
     <div class="row-padding center" style="width: 100%; margin-top:64px">
       <div class="quarter zoom" onclick="location.href='{{ url_for('hbclassification') }}';" style="margin-left:10%">
         <i class="fa fa-heart margin-bottom jumbo center"></i>
-        <p class="large">Heartbeat Classification</p>
-        <p>Based on just a 9 second .wav file, Laire can classify heartbeats into 4 distinct categories:
-          <br>Normal, Artifact, Extrasystole, and Murmur.</p>
+        <p class="large">Tool 1</p>
+        <p> Coming Soon! </p>
+
       </div>
       <div class="quarter zoom" style="margin-left:10%">
         <i class="fa fa-desktop margin-bottom jumbo"></i>
-        <p class="large">Heart Disease Prediction</p>
+        <p class="large">Tool 2</p>
         <p>Coming Soon!</p>
       </div>
 
