--- a/templates/home.html
+++ b/templates/home.html
@@ -128,15 +128,14 @@
   <div class="container light-grey" style="padding:128px 16px" id="about">
     <div class="row-padding">
       <div class="col m6">
-        <h3>Medical insights powered by machine learning.</h3>
+        <h3>Analytics</h3>
         <p>Our mission is to leverage the power of machine learning and artificial
-          intelligence to provide data analytics and insights to local organizations.
+          intelligence to provide data analytics and insight to the community.
           <br>
           <br>
           <br>Laire is committed to attracting the best talent and to providing only the best to our clients.
           <br>
           <br>
-          some text
           <!-- FAQ area
           FAQ
           <div class="faq_container">
