--- a/templates/home.html
+++ b/templates/home.html
@@ -150,7 +150,7 @@
         </p>
       </div>
       <div class="col m6">
-        <img class="image round-large" src="static/images/heartbeat.gif" alt="heartbeat">
+        <img class="image round-large" src="static/images/datascience.jpg" alt="datascience">
       </div>
     </div>
   </div>
