Fixed tools section spacing

--- a/templates/home.html
+++ b/templates/home.html
@@ -136,17 +136,7 @@
           <br>Laire is committed to attracting the best talent and to providing only the best to our clients.
           <br>
           <br>
-          <!-- FAQ area
-          FAQ
-          <div class="faq_container">
-            <div class="faq">
-              <div class="faq_question">Question goes here</div>
-              <div class="faq_answer_container">
-                <div class="faq_answer">Answer goes here</div>
-              </div>
-            </div>
-          </div>
-        -->
+      
         </p>
       </div>
       <div class="col m6">
@@ -157,28 +147,31 @@
 
 
   <!-- OUR TOOLS -->
-  <center><div class="container blue-grey" style="padding:10px 10px;" id="tools">
-    <h3 class="center">OUR TOOLS</h3>
-    <p class="center large">How we help the community</p>
-    <div class="row-padding center" style="width: 100%; margin-top:64px">
-      <div class="quarter zoom" onclick="location.href='{{ url_for('hbclassification') }}';" style="margin-left:10%">
-        <i class="fa fa-heart margin-bottom jumbo center"></i>
-        <p class="large">Tool 1</p>
-        <p> Coming Soon! </p>
+  <center>
+    <div class="container blue-grey" style="padding:10px 10px;" id="tools">
+      <h3 class="center">OUR TOOLS</h3>
+      <p class="center large">How we help the community</p>
+      <div class="row-padding center" style="width: 100%; margin-top:64px">
+
+        <div class="quarter zoom" onclick="location.href='{{ url_for('hbclassification') }}';" style="margin-left:10%">
+          <i class="fa fa-wrench margin-bottom jumbo center"></i>
+          <p class="large">Tool 1</p>
+          <p> Coming Soon! </p>
+        </div>
+        <div class="quarter zoom" style="margin-left:10%">
+          <i class="fa fa-terminal margin-bottom jumbo center"></i>
+          <p class="large">Tool 2</p>
+          <p>Coming Soon!</p>
+        </div>
 
       </div>
-      <div class="quarter zoom" style="margin-left:10%">
-        <i class="fa fa-desktop margin-bottom jumbo"></i>
-        <p class="large">Tool 2</p>
-        <p>Coming Soon!</p>
-      </div>
-
     </div>
-  </div>
-</center>
+  </center>
   <!-- OUR TEAM -->
   <div class="container" style="padding:128px 16px" id="team">
-    <center><h3 class="center" style="color: black;">THE TEAM</h3></center>
+    <center>
+      <h3 class="center" style="color: black;">THE TEAM</h3>
+    </center>
     <div class="row-padding " style="margin-top:64px; margin-left:60px;">
       <div class="col l4 m6 margin-bottom">
         <div class="card" style="background-color: #a0ffc0; width: 320px;">
@@ -226,12 +219,12 @@
   </div>
 
   <!-- Footer -->
-  <footer class="center black padding-64">
-      <center>
-    <a href="#home" class="button light-grey"><i class="fa fa-arrow-up margin-right"></i>Top</a>
-    <div class="xlarge section">
-    </div>
-</center>
+  <footer class="center black padding-64" style="width: 100%">
+    <center>
+      <a href="#home" class="button light-grey"><i class="fa fa-arrow-up margin-right"></i>Top</a>
+      <div class="xlarge section">
+      </div>
+    </center>
   </footer>
 
 
