removed unused images, fixed padding for tools div

--- a/templates/home.html
+++ b/templates/home.html
@@ -136,7 +136,7 @@
           <br>Laire is committed to attracting the best talent and to providing only the best to our clients.
           <br>
           <br>
-      
+
         </p>
       </div>
       <div class="col m6">
@@ -148,9 +148,8 @@
 
   <!-- OUR TOOLS -->
   <center>
-    <div class="container blue-grey" style="padding:10px 10px;" id="tools">
+    <div class="container blue-grey" style="padding:128px 16px;" id="tools">
       <h3 class="center">OUR TOOLS</h3>
-      <p class="center large">How we help the community</p>
       <div class="row-padding center" style="width: 100%; margin-top:64px">
 
         <div class="quarter zoom" onclick="location.href='{{ url_for('hbclassification') }}';" style="margin-left:10%">
@@ -174,7 +173,7 @@
     </center>
     <div class="row-padding " style="margin-top:64px; margin-left:60px;">
       <div class="col l4 m6 margin-bottom">
-        <div class="card" style="background-color: #a0ffc0; width: 320px;">
+        <div class="card" style="background-color: #84ffe9; width: 320px;">
           <img src="../static/images/pranavPic.JPEG" alt="Pranav" style="width:100%">
           <div class="container">
             <h3 style="color: black;">Pranav Addepalli</h3>
@@ -188,7 +187,7 @@
         </div>
       </div>
       <div class="col l4 m6 margin-bottom">
-        <div class="card" style="background-color: #a0ffc0; width: 320px;">
+        <div class="card" style="background-color: #84ffe9; width: 320px;">
           <img src="../static/images/haneefPic.JPEG" alt="Haneef" style="width:100%">
           <div class="container">
             <h3 style="color: black;">Haneef Khan</h3>
@@ -201,7 +200,7 @@
         </div>
       </div>
       <div class="col l4 m6 margin-bottom">
-        <div class="card" style="background-color: #a0ffc0; width: 320px;">
+        <div class="card" style="background-color: #84ffe9; width: 320px;">
           <img src="../static/images/sidPic.jpg" alt="Sid" style="width:100%">
           <div class="container">
             <h3 style="color: black;">Sid Rapolu</h3>
