--- a/templates/home.html
+++ b/templates/home.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='css/mainstyle.css') }}">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="icon" src="static/images/tabIcon.png">
+<link rel="icon" href="{{ url_for('static',filename='images/tabIcon.png') }}">
 <style>
   body,
   h1,
