--- a/templates/home.html
+++ b/templates/home.html
@@ -147,25 +147,31 @@
 
 
   <!-- OUR TOOLS -->
-  <center>
-    <div class="container blue-grey" style="padding:128px 16px;" id="tools">
-      <h3 class="center">OUR TOOLS</h3>
-      <div class="row-padding center" style="width: 100%; margin-top:64px">
-
-        <div class="quarter zoom" onclick="location.href='{{ url_for('hbc') }}';" style="margin-left:10%">
-          <i class="fa fa-heart margin-bottom jumbo center"></i>
-          <p class="large">Heartbeat Classification</p>
-          <p> Classifies heartbeats into normal, artifact, extrasystole, and murmur classes.</p>
-        </div>
-        <div class="quarter zoom" style="margin-left:10%">
-          <i class="fa fa-terminal margin-bottom jumbo center"></i>
-          <p class="large">Tool 2</p>
-          <p>Coming Soon!</p>
-        </div>
-
-      </div>
-    </div>
-  </center>
+  <div class="row-padding " style="margin-top:64px; margin-left:60px;">
+      <div class="col l4 m6 margin-bottom">
+        <div class="card" style="background-color: #a0ffc0; width: 320px;">
+        <div class="card" style="background-color: #84ffe9; width: 320px;">
+          <img src="../static/images/pranavPic.JPEG" alt="Pranav" style="width:100%">
+          <div class="container">
+            <h3 style="color: black;">Pranav Addepalli</h3>
+<h3 style="color: black;">Pranav Addepalli</h3>
+        </div>
+      </div>
+      <div class="col l4 m6 margin-bottom">
+        <div class="card" style="background-color: #a0ffc0; width: 320px;">
+        <div class="card" style="background-color: #84ffe9; width: 320px;">
+          <img src="../static/images/haneefPic.JPEG" alt="Haneef" style="width:100%">
+          <div class="container">
+            <h3 style="color: black;">Haneef Khan</h3>
+<h3 style="color: black;">Haneef Khan</h3>
+        </div>
+      </div>
+      <div class="col l4 m6 margin-bottom">
+        <div class="card" style="background-color: #a0ffc0; width: 320px;">
+        <div class="card" style="background-color: #84ffe9; width: 320px;">
+          <img src="../static/images/sidPic.jpg" alt="Sid" style="width:100%">
+          <div class="container">
+            <h3 style="color: black;">Sid Rapolu</h3>
 
 
   <!-- Footer -->
