--- a/templates/home.html
+++ b/templates/home.html
@@ -148,30 +148,30 @@
 
   <!-- OUR TOOLS -->
   <div class="row-padding " style="margin-top:64px; margin-left:60px;">
-      <div class="col l4 m6 margin-bottom">
-        <div class="card" style="background-color: #a0ffc0; width: 320px;">
-        <div class="card" style="background-color: #84ffe9; width: 320px;">
-          <img src="../static/images/pranavPic.JPEG" alt="Pranav" style="width:100%">
-          <div class="container">
-            <h3 style="color: black;">Pranav Addepalli</h3>
-<h3 style="color: black;">Pranav Addepalli</h3>
-        </div>
-      </div>
-      <div class="col l4 m6 margin-bottom">
-        <div class="card" style="background-color: #a0ffc0; width: 320px;">
-        <div class="card" style="background-color: #84ffe9; width: 320px;">
-          <img src="../static/images/haneefPic.JPEG" alt="Haneef" style="width:100%">
-          <div class="container">
-            <h3 style="color: black;">Haneef Khan</h3>
-<h3 style="color: black;">Haneef Khan</h3>
-        </div>
-      </div>
-      <div class="col l4 m6 margin-bottom">
-        <div class="card" style="background-color: #a0ffc0; width: 320px;">
-        <div class="card" style="background-color: #84ffe9; width: 320px;">
-          <img src="../static/images/sidPic.jpg" alt="Sid" style="width:100%">
-          <div class="container">
-            <h3 style="color: black;">Sid Rapolu</h3>
+      <div class="col l4 m6 margin-bottom">
+        <div class="card" style="background-color: #a0ffc0; width: 320px;">
+        <div class="card" style="background-color: #84ffe9; width: 320px;">
+          <img src="../static/images/pranavPic.JPEG" alt="Pranav" style="width:100%">
+          <div class="container">
+            <h3 style="color: black;">Pranav Addepalli</h3>
+@@ -188,7 +187,7 @@ <h3 style="color: black;">Pranav Addepalli</h3>
+        </div>
+      </div>
+      <div class="col l4 m6 margin-bottom">
+        <div class="card" style="background-color: #a0ffc0; width: 320px;">
+        <div class="card" style="background-color: #84ffe9; width: 320px;">
+          <img src="../static/images/haneefPic.JPEG" alt="Haneef" style="width:100%">
+          <div class="container">
+            <h3 style="color: black;">Haneef Khan</h3>
+@@ -201,7 +200,7 @@ <h3 style="color: black;">Haneef Khan</h3>
+        </div>
+      </div>
+      <div class="col l4 m6 margin-bottom">
+        <div class="card" style="background-color: #a0ffc0; width: 320px;">
+        <div class="card" style="background-color: #84ffe9; width: 320px;">
+          <img src="../static/images/sidPic.jpg" alt="Sid" style="width:100%">
+          <div class="container">
+            <h3 style="color: black;">Sid Rapolu</h3>
 
 
   <!-- Footer -->
