tab icon change
Chagned tab icon for better dimensions

--- a/templates/home.html
+++ b/templates/home.html
@@ -146,7 +146,7 @@
   </div>
 
 
-  <!-- OUR TOOLS -->
+  <!-- ROLES -->
   <div class="row-padding " style="margin-top:64px; margin-left:60px;">
       <div class="col l4 m6 margin-bottom">
         <div class="card" style="background-color: #a0ffc0; width: 320px;">
@@ -154,7 +154,7 @@
           <img src="../static/images/pranavPic.JPEG" alt="Pranav" style="width:100%">
           <div class="container">
             <h3 style="color: black;">Pranav Addepalli</h3>
-@@ -188,7 +187,7 @@ <h3 style="color: black;">Pranav Addepalli</h3>
+<h3 style="color: black;">Pranav Addepalli</h3>
         </div>
       </div>
       <div class="col l4 m6 margin-bottom">
@@ -163,7 +163,7 @@
           <img src="../static/images/haneefPic.JPEG" alt="Haneef" style="width:100%">
           <div class="container">
             <h3 style="color: black;">Haneef Khan</h3>
-@@ -201,7 +200,7 @@ <h3 style="color: black;">Haneef Khan</h3>
+<h3 style="color: black;">Haneef Khan</h3>
         </div>
       </div>
       <div class="col l4 m6 margin-bottom">
