--- a/templates/home.html
+++ b/templates/home.html
@@ -147,31 +147,56 @@
 
 
   <!-- ROLES -->
-  <div class="row-padding " style="margin-top:64px; margin-left:60px;">
+  <div class="container" style="padding:128px 16px" id="team">
+    <center>
+      <h3 class="center" style="color: black;">THE TEAM</h3>
+    </center>
+    <div class="row-padding " style="margin-top:64px; margin-left:60px;">
       <div class="col l4 m6 margin-bottom">
-        <div class="card" style="background-color: #a0ffc0; width: 320px;">
         <div class="card" style="background-color: #84ffe9; width: 320px;">
           <img src="../static/images/pranavPic.JPEG" alt="Pranav" style="width:100%">
           <div class="container">
             <h3 style="color: black;">Pranav Addepalli</h3>
-<h3 style="color: black;">Pranav Addepalli</h3>
+            <p class="opacity" style="padding-bottom: 20px; color: black;">Full Stack Developer</p>
+            <center>
+              <a href="mailto:pranav@laire.org"> <i class="fa fa-envelope zoom" style="padding-left:20px; padding-right:20px; padding-bottom:20px"></i></a>
+              <a href="https://www.linkedin.com/in/pranavaddepalli/"> <i class="fa fa-linkedin hover-opacity zoom" style="padding-left:20px; padding-right:20px; padding-bottom:30px"></i></a>
+
+            </center>
+          </div>
         </div>
       </div>
       <div class="col l4 m6 margin-bottom">
-        <div class="card" style="background-color: #a0ffc0; width: 320px;">
         <div class="card" style="background-color: #84ffe9; width: 320px;">
           <img src="../static/images/haneefPic.JPEG" alt="Haneef" style="width:100%">
           <div class="container">
             <h3 style="color: black;">Haneef Khan</h3>
-<h3 style="color: black;">Haneef Khan</h3>
+            <p class="opacity" style="padding-bottom: 20px; color: black;">Lead Backend Developer</p>
+            <center>
+              <a href="mailto:haneef@laire.org"> <i class="fa fa-envelope zoom" style="padding-left:20px; padding-right:20px; padding-bottom:10px"></i></a>
+              <a href="https://www.linkedin.com/in/haneef-khan-778676139/"> <i class="fa fa-linkedin hover-opacity zoom" style="padding-left:20px; padding-right:20px; padding-bottom:30px"></i></a>
+            </center>
+          </div>
         </div>
       </div>
       <div class="col l4 m6 margin-bottom">
-        <div class="card" style="background-color: #a0ffc0; width: 320px;">
         <div class="card" style="background-color: #84ffe9; width: 320px;">
           <img src="../static/images/sidPic.jpg" alt="Sid" style="width:100%">
           <div class="container">
             <h3 style="color: black;">Sid Rapolu</h3>
+            <p class="opacity" style="padding-bottom: 20px; color: black;">Lead UX Developer</p>
+            <center>
+              <a href="mailto:sid@laire.org"> <i class="fa fa-envelope zoom" style="padding-left:20px; padding-right:20px; padding-bottom:30px"></i></a>
+              <a href="https://www.linkedin.com/in/sid-r-2a00a1137/"> <i class="fa fa-linkedin hover-opacity zoom" style="padding-left:20px; padding-right:20px; padding-bottom:30px"></i></a>
+
+            </center>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
 
 
   <!-- Footer -->
