data science gif added
data science gif added

--- a/templates/home.html
+++ b/templates/home.html
@@ -140,7 +140,7 @@
         </p>
       </div>
       <div class="col m6">
-        <img class="image round-large" src="static/images/" alt="datascience">
+        <img class="image round-large" src="static/images/datascience.gif" alt="datascience">
       </div>
     </div>
   </div>
