updated home bg image

--- a/templates/home.html
+++ b/templates/home.html
@@ -47,7 +47,7 @@
   .bgimg-1 {
     background-position: center;
     background-size: cover;
-    background-image: url("https://imgnooz.com/sites/default/files/wallpaper/abstract/55590/pink-blue-gradient-wallpapers-55590-9972982.png");
+    background-image: background-image: url('../../images/homebg.png');
     min-height: 100%;
   }
 
