--- a/templates/home.html
+++ b/templates/home.html
@@ -47,7 +47,7 @@
   .bgimg-1 {
     background-position: center;
     background-size: cover;
-    background-image: background-image: url('../../images/homebg.png');
+    background-image: background-image: url('../../images/homebg.jpg');
     min-height: 100%;
   }
 
