--- a/templates/home.html
+++ b/templates/home.html
@@ -77,7 +77,7 @@
   }
 
   #tools {
-    background-image: url("https://imgnooz.com/sites/default/files/wallpaper/abstract/55590/pink-blue-gradient-wallpapers-55590-3961722.jpg");
+    url('../../images/homebg.jpg');
   }
 </style>
 
