--- a/templates/home.html
+++ b/templates/home.html
@@ -125,10 +125,10 @@
   </header>
 
   <!-- ABOUT COMPANY -->
-  <div class="container light-grey" style="padding:128px 16px" id="about">
+  <div class="container" style="padding:128px 16px" id="about">
     <div class="row-padding">
       <div class="col m6">
-        <h3>Analytics</h3>
+        <h3>About Us</h3>
         <p>Our mission is to leverage the power of machine learning and artificial
           intelligence to provide data analytics and insight to the community.
           <br>
@@ -146,8 +146,8 @@
   </div>
 
 
-  <!-- ROLES -->
-  <div class="container" style="padding:128px 16px" id="team">
+  <!-- OUR TEAM -->
+  <div class="container light-grey" style="padding:128px 16px" id="team">
     <center>
       <h3 class="center" style="color: black;">THE TEAM</h3>
     </center>
