--- a/templates/home.html
+++ b/templates/home.html
@@ -125,7 +125,7 @@
   </header>
 
   <!-- ABOUT COMPANY -->
-  <div class="container" style="padding:128px 16px" id="about">
+  <div class="container light-grey" style="padding:128px 16px" id="about">
     <div class="row-padding">
       <div class="col m6">
         <h3>About Us</h3>
@@ -147,7 +147,7 @@
 
 
   <!-- OUR TEAM -->
-  <div class="container light-grey" style="padding:128px 16px" id="team">
+  <div class="container dark-grey" style="padding:128px 16px" id="team">
     <center>
       <h3 class="center" style="color: black;">THE TEAM</h3>
     </center>
