--- a/templates/home.html
+++ b/templates/home.html
@@ -47,7 +47,7 @@
   .bgimg-1 {
     background-position: center;
     background-size: cover;
-    background-image: url('../../images/homebg.jpg');
+    background-image: url('../images/homebg.jpg');
     min-height: 100%;
   }
 
@@ -149,7 +149,7 @@
   <!-- OUR TEAM -->
   <div class="container dark-grey" style="padding:128px 16px" id="team">
     <center>
-      <h3 class="center" style="color: black;">THE TEAM</h3>
+      <h3 class="center" style="color: white;">THE TEAM</h3>
     </center>
     <div class="row-padding " style="margin-top:64px; margin-left:60px;">
       <div class="col l4 m6 margin-bottom">
