--- a/templates/home.html
+++ b/templates/home.html
@@ -77,7 +77,7 @@
   }
 
   #tools {
-    url('../../images/homebg.jpg');
+    background-image: url('../images/homebg.jpg');
   }
 </style>
 
@@ -147,9 +147,9 @@
 
 
   <!-- OUR TEAM -->
-  <div class="container dark-grey" style="padding:128px 16px" id="team">
+  <div class="container" style="padding:128px 16px" id="team">
     <center>
-      <h3 class="center" style="color: white;">THE TEAM</h3>
+      <h3 class="center" style="color: black;">THE TEAM</h3>
     </center>
     <div class="row-padding " style="margin-top:64px; margin-left:60px;">
       <div class="col l4 m6 margin-bottom">
