--- a/templates/home.html
+++ b/templates/home.html
@@ -47,7 +47,7 @@
   .bgimg-1 {
     background-position: center;
     background-size: cover;
-    background-image: url('../images/homebg.jpg');
+    background-image: url('../../images/homebg.jpg');
     min-height: 100%;
   }
 
@@ -77,7 +77,7 @@
   }
 
   #tools {
-    background-image: url('../images/homebg.jpg');
+    background-image: url('../../images/homebg.jpg');
   }
 </style>
 
@@ -200,7 +200,7 @@
 
 
   <!-- Footer -->
-  <footer class="center black padding-64" style="width: 100%">
+  <footer class="center light-gray padding-64" style="width: 100%">
     <center>
       <a href="#home" class="button light-grey"><i class="fa fa-arrow-up margin-right"></i>Top</a>
       <div class="xlarge section">
