--- a/templates/home.html
+++ b/templates/home.html
@@ -202,7 +202,7 @@
   <!-- Footer -->
   <footer class="center light-gray padding-64" style="width: 100%">
     <center>
-      <a href="#home" class="button light-grey"><i class="fa fa-arrow-up margin-right"></i>Top</a>
+      <a href="#home" class="button light-grey"><i class="fa fa-arrow-up margin-right"></i>Back to top</a>
       <div class="xlarge section">
       </div>
     </center>
