--- a/templates/home.html
+++ b/templates/home.html
@@ -47,7 +47,7 @@
   .bgimg-1 {
     background-position: center;
     background-size: cover;
-    background-image: url('../../images/homebg.jpg');
+    background-image: url("homebg.jpg");
     min-height: 100%;
   }
 
@@ -77,7 +77,7 @@
   }
 
   #tools {
-    background-image: url('../../images/homebg.jpg');
+    background-image: url("homebg.jpg");
   }
 </style>
 
